# llm-based-analysis

./: .gitignore  README.md  jn_requirements.txt  requirements.txt
notebooks/: grading-h1-class.ipynb  notebook-coding-agent-team.ipynb  notebook-crewAI-scrum-team-local-LLMs.ipynb  notebook-local-OSS.ipynb  notebook-openAI.ipynb
notebooks/doc/: first_run_qna.md  interview_questions_answers.md
team01/: README.md  pyproject.toml
team01/src/team01/: crew.py  main.py
